[gd_scene load_steps=5 format=3 uid="uid://dpnpaw7mwfbkd"]

[ext_resource type="Script" uid="uid://dkw2k1svw6ga8" path="res://scenes/ui/main_menu.gd" id="1_pdd5j"]
[ext_resource type="Texture2D" uid="uid://cat8bdoa2nyme" path="res://assets/cover.png" id="2_1wtts"]
[ext_resource type="PackedScene" uid="uid://dlytqkh07jj0t" path="res://scenes/ui/main_menu_button.tscn" id="2_4gpwf"]
[ext_resource type="Resource" uid="uid://drbh5deiiyr6f" path="res://scenes/run/run_startup.tres" id="2_i217a"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pdd5j")
run_startup = ExtResource("2_i217a")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_1wtts")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -42.0
offset_right = 53.0
offset_bottom = -6.0
grow_vertical = 0
theme_override_constants/separation = 0
alignment = 1

[node name="NewGame" parent="VBoxContainer" instance=ExtResource("2_4gpwf")]
layout_mode = 2
btn_text = "New Game"

[node name="Continue" parent="VBoxContainer" instance=ExtResource("2_4gpwf")]
layout_mode = 2
btn_text = "Continue"

[node name="Exit" parent="VBoxContainer" instance=ExtResource("2_4gpwf")]
layout_mode = 2
btn_text = "Exit"

[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
